@@ -6,15 +6,40 @@ public class SampleAutoBoxingWrapper {
 
         // every primitive type have a wrapper class an it converts the primitive type to Object using the static method valueOf
           int myint=10;
-        Integer integer = Integer.valueOf(myint); // autoboxing expilicitly
+        Integer integer = Integer.valueOf(myint); // autoboxing expilicitly // this is unnecessary
          int x = integer;
         int sum = x+10;
          Integer integer1 = myint; // autoboxing primtive to Object type
 
-        Integer integer2 = new Integer(100);
-        myint =integer2; // unboxing object to primitive
-        // or
-        int intValue = integer2.intValue(); // unnecesarry to do this
+
+
+
+
+
+        Integer xx = 1 ; // behind the scenes: Integer.valueOf(1)
+        Integer yy = Integer.valueOf(1);
+        System.out.println(xx == yy); // true (from cache)
+
+        Integer z = Integer.valueOf(200);
+        Integer w = Integer.valueOf(200);
+        System.out.println(z == w); // false (outside cache range)
+        System.out.println("COntent checking "+z.equals(w));
+
+        //Why valueOf() is Preferred:
+        //Uses object pooling (Integer cache from -128 to 127)
+
+        //Saves memory and improves performance
+
+        //Used by the compiler during autoboxing
+
+        // internal usasge is this
+
+//        public static Integer valueOf(int i) {
+//            if (i >= -128 && i <= 127) // default cache range
+//                return IntegerCache.cache[i + 128];
+//            else
+//                return new Integer(i);
+//        }
 
 
     }
